# Technologie-informatyczne-repozytorium

Ko-o-main/: CMakeLists.txt  kolo.cpp  kolo.h  main.cpp
Lista-Samochod-main/: CMakeLists.txt  Lista.cpp  Lista.h  Listaaut.h  Zapis.cpp  Zapis.h  main.cpp
Nowy-kalkulator-main/: CMakeLists.txt  main.cpp
Stara-tablica-main/: CMakeLists.txt  main.cpp
Stary-kalkulator-main/: CMakeLists.txt  main.cpp
figury-main/: CMakeLists.txt  README.md  circle.cpp  circle.h  figure.cpp  figure.h  main.cpp  rectangle.cpp  rectangle.h  square.cpp  square.h  triangle.cpp  triangle.h
klasyobiekt1-main/: CMakeLists.txt  main.cpp  point.cpp  point.h
kolejka2-main/: CMakeLists.txt  main.cpp  queue.cpp  queue.h
